# tauri-svelte-gis

./: .gitignore  .prettierignore  eslint.config.js  extensions.txt  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.js
scripts/: binaries.js  ogr2ogr.js
src/: app.css  app.html  vite-env.d.ts
src-tauri/: .taurignore  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/common/: disk.rs  mod.rs  response.rs
src-tauri/src/map_server/: command.rs  mod.rs  server.rs  shape_file.rs
src-tauri/src/map_server/shapefile_server/: server.rs
src-tauri/src/shapefile_server/: error.rs  mod.rs  server.rs  shapefile_to_geojson.rs  utilities.rs
src-tauri/src/utils/: disk.rs  files.rs  log.rs  mod.rs  response.rs  window.rs
src-tauri/workspace/mbtiles/: config.yaml
src/components/: icon.svelte  index.ts  tauri.ts
src/components/danmaku/: base-danmaku.ts  danmaku-layout.ts  danmaku-renderer.ts  fixed-danmaku-layout.ts  fixed-danmaku.ts  index.ts  scroll-danmaku-layout.ts  types.ts  (+2 more)
src/context/: context.svelte.ts
src/global-context/: context.svelte.ts  global-provider.svelte  index.ts
src/routes/: +layout.svelte  +page.svelte  page copy.svelte
src/services/: disk.ts  index.ts  shapefile.ts  shapfile.ts
src/types/: disk.ts  index.ts  types.ts
src/utils/: canvas.ts  danmaku.ts  icon.ts  index.ts  message.ts  routes.tsx  storage.ts  tauri.ts  token.ts  user.ts  utils.ts
static/: sober.min.js  tailwind.css
static/data/: geojson.geojson
static/style/: style.json
(+41 files in other folders)
