[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
zip = "2.2.2"
once_cell = "1.20.2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
walkdir = "2"
tauri-plugin-dialog = "2"
shapefile = "0.6.0"
martin = "0.14.2"
gdal = "0.17.1"
mbtiles = "0.12.0"
geo = "0.29.3"
geo-types = "0.7.15"
thiserror = "2.0.11"
# mvt = "0.9.5"
# tokio = { version = "1.0", features = ["full"] }
# anyhow = "1.0"
# axum = "0.8.1"
# sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio" ] }
# libsqlite3-sys = { version = ">=0.27", features = ["bundled"] }
# geojson = "0.24.1"
# actix-web = "4.9.0"
